fix: scrollbar style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,23 +57,3 @@
     @apply bg-background text-foreground;
   }
 }
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #1f2937;
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #374151;
-}
